Working prototype for video encoding

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 .gradle
 /build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+/bin/
+/.settings/
+.project
+.classpath
 !gradle-wrapper.jar
-
-# Cache of project
 .gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
