--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ dependencies {
     implementation 'com.github.jnr:jnr-ffi:2.1.9'
     implementation 'commons-io:commons-io:2.6'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
+     
 }
 
 repositories {
