--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,18 @@
 plugins {
     id 'java'
     id "io.freefair.lombok" version "3.8.0"
+    
+    id "maven"
+    id "maven-publish"
+    id "com.jfrog.bintray" version "1.8.4"
 }
+
+compileJava.options.encoding = 'UTF-8'
+
+group = 'com.github.zakgof'
+archivesBaseName = 'velvetvideo'
+version = '0.0.1'
+def github = 'https://github.com/zakgof/velvet-video'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -13,7 +24,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
-     
 }
 
 repositories {
@@ -21,11 +31,92 @@ repositories {
 }
 
 task fatJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': 'com.zakgof.velvetvideo.Main2'
-    }
+    //manifest {
+    //    attributes 'Main-Class': 'com.zakgof.velvetvideo.Main2'
+    //}
     baseName = 'velvetvideo'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
+
+ext {
+   descr = 'Java video encoding/decoding/muxing/demuxing library'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.java
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+def pomConfig = {
+     scm {
+          connection 'scm:git:${github}.git'
+          developerConnection 'scm:git:${github}.git'
+          url github
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'zakgof'
+            name 'Oleksandr Zakusylo'
+            email 'zakgof@gmail.com'
+          }
+        }
+}
+
+publishing {
+	publications {
+		MyPublication(MavenPublication) {
+			from components.java
+			artifact sourcesJar
+			artifact javadocJar
+  		    groupId group  		    
+            artifactId archivesBaseName
+            version project.version
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', project.descr)
+                root.appendNode('name', project.archivesBaseName)
+                root.appendNode('url', github + '.git')
+                root.children().last() + pomConfig
+            }
+		}
+	}
+}
+
+bintray {
+    user = 'zakgof'
+    key = project.hasProperty('bintrayKey') ? bintrayKey : System.getenv('BINTRAY_KEY')
+    publications = ['MyPublication']
+    configurations = ['archives']
+    override = true
+    pkg {
+        repo = 'maven'
+        name = archivesBaseName
+        userOrg = 'zakgof'
+        licenses = ['Apache-2.0']
+        vcsUrl = github + '.git'
+        version {
+            name = project.version
+        }
+    }
+}
+
 
