--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 compileJava.options.encoding = 'UTF-8'
 
 group = 'com.github.zakgof'
-archivesBaseName = 'velvetvideo'
+archivesBaseName = 'velvet-video'
 version = '0.0.1'
 def github = 'https://github.com/zakgof/velvet-video'
 
@@ -34,7 +34,7 @@ task fatJar(type: Jar) {
     //manifest {
     //    attributes 'Main-Class': 'com.zakgof.velvetvideo.Main2'
     //}
-    baseName = 'velvetvideo'
+    baseName = 'velvet-video'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
@@ -69,6 +69,10 @@ def pomConfig = {
           license {
             name 'The Apache License, Version 2.0'
             url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+          license {
+			name 'GNU General Public License v3.0'
+   			url 'https://opensource.org/licenses/GPL-3.0'
           }
         }
 
@@ -111,7 +115,7 @@ bintray {
         repo = 'maven'
         name = archivesBaseName
         userOrg = 'zakgof'
-        licenses = ['Apache-2.0']
+        licenses = ['Apache-2.0', 'GPL-3.0']
         vcsUrl = github + '.git'
         version {
             name = project.version
