Added muxer metadata and raw packet handling

--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ plugins {
     id "maven"
     id "maven-publish"
     id "com.jfrog.bintray" version "1.8.4"
+    id "com.jfrog.artifactory" version "4.9.9"
 }
 
 compileJava.options.encoding = 'UTF-8'
 
 group = 'com.github.zakgof'
 archivesBaseName = 'velvet-video'
-version = '0.0.1'
+version = '0.0.2-SNAPSHOT'
 def github = 'https://github.com/zakgof/velvet-video'
 
 sourceCompatibility = 1.8
@@ -121,6 +122,26 @@ bintray {
             name = project.version
         }
     }
+}
+
+artifactory {
+    contextUrl = 'http://oss.jfrog.org'
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = 'zakgof'
+            password = project.hasProperty('bintrayKey') ? bintrayKey : System.getenv('BINTRAY_KEY')
+        }
+        defaults {
+            publications('MyPublication')
+            publishArtifacts = true
+            publishPom = true
+        }
+    }
+    resolve {
+        repoKey = 'jcenter'
+    }
+    clientConfig.info.setBuildNumber('0001')
 }
 
 
