--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.5.2'
+    
+    testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.0.1.full'
+    
 }
 
 repositories {
