--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	runtimeOnly 'org.slf4j:slf4j-api:2.0.0-alpha0'
-	
+	implementation 'org.slf4j:slf4j-api:2.0.0-alpha0'
     implementation 'com.github.jnr:jnr-ffi:2.1.9'
     implementation 'commons-io:commons-io:2.6'
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.5.2'
-    
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.0.1.full'
-    
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha0'
 }
 
 repositories {
@@ -144,7 +142,7 @@ artifactory {
     resolve {
         repoKey = 'jcenter'
     }
-    clientConfig.info.setBuildNumber('0002')
+    clientConfig.info.setBuildNumber('0003')
 }
 
 
