--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id "maven-publish"
     id "com.jfrog.bintray" version "1.8.4"
     id "com.jfrog.artifactory" version "4.9.9"
+    id 'com.adarshr.test-logger' version '1.6.0'
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -27,7 +28,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.0.1.full'
+    testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.2.0.full'
     testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha0'
 }
 
