Enabled JUnit tests in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ repositories {
     jcenter()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 task fatJar(type: Jar) {
     baseName = 'velvet-video'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
