--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,13 @@ dependencies {
 	implementation 'org.slf4j:slf4j-api:2.0.0-alpha0'
     implementation 'com.github.jnr:jnr-ffi:2.1.9'
     implementation 'commons-io:commons-io:2.6'
+    implementation 'com.github.zakgof:tools:0.7.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.2.0.full'
+    testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.2.1.full'
     testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha0'
 }
 
