--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.5.2'
+    testImplementation 'org.quifft:quifft:0.1.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'com.github.zakgof:velvet-video-natives:0.2.1.full'
     testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha0'
+    
 }
 
 repositories {
