Pass -D props to test task

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ repositories {
 
 test {
     useJUnitPlatform()
+    options {
+        systemProperties(System.getProperties())
+    }
 }
 
 task fatJar(type: Jar) {
